[package]
name = "tongji-oauth"
description="An SDK used for login into Tongji University's authentication system."
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Hell-Tractor/tongji-oauth"
readme="README.md"

[dependencies]
base64 = "0.22.1"
rand = "0.8.5"
reqwest = { version = "0.12.15", features = ["cookies", "json"] }
rsa = "0.9.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
